trunk/Archive2/2b/858534a72207b4/output
main.cpp:12:28: error: too few arguments to function call, expected 2, have 0
int main(){ baz = foo; baz(); }
                       ~~~ ^
1 error generated.
